# lyricsify

./: Cargo.toml  LICENSE  README.md
.kiro/hooks/: push-on-task-complete.kiro.hook  rust-docs-sync.kiro.hook
.kiro/specs/spotify-lyrics-overlay/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: app_core.rs  config.rs  error.rs  lyrics_fetcher.rs  main.rs  spotify_client.rs  ui_manager.rs
