[package]
name = "lyricsify"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.13", features = ["client-reqwest"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "3.6"
cocoa = "0.26"
objc = "0.2"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
